# k8s-tutorial

./: backend.yaml  deployment.yaml  fluentd.yaml  frontend.yaml  host-ingress.yaml  hpa.yaml  k8s-web-to-nginx.yaml  kuard-deployment.yaml  kuard-rs.yaml  kuard.yaml  minio.yaml  nginx-fast-storage.yaml  nginx.yaml  path-ingress.yaml  pyproject.toml  service.yaml
CHAPTER 12 Jobs/: job-cronjob.yaml  job-oneshot-failure1.yaml  job-oneshot.yaml  job-parallel.yaml  jobs-oneshot-failure2.yaml  service-queue.yaml
CHAPTER 13 ConfigMaps/: kuard-config.yaml  kuard-secret.yaml
CHAPTER 16 Storage Solutions/: dynamic-volume-claim.yaml  external-ip-endpoints.yaml  mongo-headless-service.yaml  mongo-init-configmap.yaml  mongo-init-job.yaml  mongo-simple.yaml  mongo-with-init.yaml  mysql-deployment.yaml  mysql-service.yaml  nfs-volume-claim.yaml  nfs-volume.yaml  phpmyadmin.yaml  storageclass.yaml
backend/: Dockerfile  main.py
frontend/: Dockerfile  main.py
k8s-web-hello/: index.mjs  package.json
k8s-web-to-nginx/: index.mjs  package.json
