[project]
name = "k8s-tutorial"
version = "0.1.0"
description = "tutorial for learning k8s"
authors = [
    {name = "deepblue597",email = "iasonas2001@hotmail.com"}
]
readme = "README.md"
requires-python = ">3.12"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "streamlit (>=1.47.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
